tests/ui/consts/const-len-underflow-subspans.stderr
error[E0080]: attempt to compute `1_usize - 2_usize`, which would overflow
  --> $DIR/const-len-underflow-subspans.rs:8:17
   |
LL |     let a: [i8; ONE - TWO] = unimplemented!();
   |                 ^^^^^^^^^ evaluation of constant value failed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
